@@ -1,4 +1,6 @@
 Sigil v0.1.5 <ADD DATE>
+    - fixed an issue with Sigil crashing on epubs with "date" OPF elements but no value set
+    for those elements (InDesign CS4 creates such invalid epubs) (issue #149)
     - fixed an issue with words being merged on TXT import (issue #148)
     - various performance improvements through code profiling and parallelization
     - Linux and Mac builds should now be slightly faster because of new compiler optimizations
